Archive2/ca/fcc87d6ee0dde4/output
main.cpp: In member function 'void any::variable<T>::setType()':
main.cpp:7:19: error: expected unqualified-id before '=' token
                 T = NewT;
                   ^
main.cpp: In constructor 'any::any(T)':
main.cpp:16:19: error: expected primary-expression before '!=' token
             if (T != decltype(v.val)){
                   ^
main.cpp:16:22: error: expected primary-expression before 'decltype'
             if (T != decltype(v.val)){
                      ^
main.cpp:16:22: error: expected ')' before 'decltype'
